[package]
name = "adm"
version = "0.1.0"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
edition = "2018"
description = "Smart device management library."
license = "Apache-2.0/MIT"

[dependencies]
serde = "1.0.83"
serde_derive = "1.0.83"
toml = "0.4.10"
lifxi = "0.1.1"
lazy_static = "1.2.0"
dirs = "1.0.4"
