[package]
name = "adm"
version = "0.1.0"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
edition = "2018"
description = "Smart device management library."
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/Aehmlo/adm"
documentation = "https://docs.rs/adm"
keywords = ["iot", "smart", "device"]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "Aehmlo/adm", branch = "master" }

maintenance = { status = "experimental" }

[dependencies]
serde = "1.0.83"
serde_derive = "1.0.83"
toml = "0.4.10"
lifxi = "0.1.1"
lazy_static = "1.2.0"
dirs = "1.0.4"
